# tribble

./: .dockerignore  .gitignore  Dockerfile  TODO  build-client.sh  install_cabal_dependencies.sh  stack.yaml
client/: stack.yaml  tribble-client.cabal
client/src/: Accounts.hs  Cache.hs  Common.hs  Imports.hs  Label.hs  Main.hs  Question.hs  Questions.hs  Test.hs  Tests.hs
client/static/: main.css
common/: tribble-common.cabal
common/src/: Components.hs  Types.hs
common/src/Types/: Dated.hs  Labelled.hs
server/: tribble-server.cabal
server/src/: CLI.hs  Common.hs  Config.hs  DB.hs  Data.hs  Export.hs  Imports.hs  Main.hs  OldData.hs  Services.hs
server/src/Control/Concurrent/: Notify.hs
server/src/Export/: Common.hs  LaTeX.hs  Markdown.hs  PDF.hs  Pandoc.hs  Word.hs
