name:                tribble-client
version:             0.1.0.0
synopsis:
  Client part of a web app for organising school tests.
-- description:
-- license:
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.10

executable tribble-client
  main-is:             Main.hs
  other-modules:
    Accounts
    Common
    Imports
    Label
    Question
    Questions
    Test
    Tests
  -- other-extensions:
  build-depends:
    base >= 4.8 && < 4.10
    , base64-bytestring >= 1.0 && < 1.1
    , bytestring >= 0.10 && < 0.11
    , cereal >= 0.5 && < 0.6
    , containers >= 0.5 && < 0.6
    , Coroutine >= 0.2 && < 0.3
    , ghcjs-base >= 0.2 && < 0.3
    , ghcjs-dom >= 0.2.3 && < 0.8
    , ghcjs-websockets-reflex >= 0.1 && < 0.2
    , hashable >= 1.2.3 && < 1.3
    , ID >= 0.1 && < 0.2
    , lens >= 4.12 && < 4.15
    , mtl >= 2.2 && < 2.3
    , plug-client >= 0.1 && < 0.2
    , plug-common >= 0.1 && < 0.2
    , reflex-dom >= 0.3 && < 0.5
    , reflex-dom-contrib >= 0.4 && < 0.6
    , safecopy >= 0.9 && < 0.10
    , semigroups >= 0.17 && < 0.19
    , text >= 1.2 && < 1.3
    , text-index >= 0.2 && < 0.3
    , time >= 1.5 && < 1.7
    , transformers >= 0.4 && < 0.6
    , tribble-common
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    RecursiveDo
    ScopedTypeVariables
    TypeFamilies
