name:                tribble-server
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

executable tribble-server
  main-is:             Main.hs
  other-modules:
    DB
    Config
    Control.Concurrent.Notify
  build-depends:
    base >= 4.8 && < 4.9
    , acid-state >= 0.14 && < 0.15
    , aeson >= 0.9 && < 0.11
    , base64-bytestring >= 1.0 && < 1.1
    , blaze-builder
    , bytestring
    , cereal >= 0.4 && < 0.6
    , configifier >= 0.0.8 && < 0.1
    , containers >= 0.5 && < 0.6
    , cookie >= 0.4 && < 0.5
    , Coroutine >= 0.2 && < 0.3
    , directory >= 1.2 && < 1.3
    , heredoc >= 0.2 && < 0.3
    , http-types
    , lens >= 4.12 && < 4.14
    , mtl >= 2.2 && < 2.3
    , network
    , network-uri >= 2.6 && < 2.7
    , oauth2-google >= 0.1 && < 0.2
    , pandoc >= 1.16 && < 1.17
    , pandoc-types >= 1.16 && < 1.17
    , plug-common >= 0.1 && < 0.2
    , plug-server >= 0.1 && < 0.2
    , psqueues >= 0.2 && < 0.3
    , random >= 1.1 && < 1.2
    , safecopy >= 0.8 && < 0.10
    , serversession >= 1.0 && < 1.1
    , serversession-backend-acid-state >= 1.0 && < 1.1
    , serversession-frontend-wai >= 1.0 && < 1.1
    , TCache >= 0.14 && < 0.15
    , text
    , text-index >= 0.1 && < 0.2
    , time >= 1.5 && < 1.6
    , transformers
    , tst
    , vault >= 0.3 && < 0.4
    , wai-session >= 0.3 && < 0.4
    , wai-websockets
    , warp
    , wai
    , wai-app-static
    , websockets

    , tribble-common
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    ScopedTypeVariables
