name:                tribble-server
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Arie Peterson
maintainer:          ariep@xs4all.nl
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

executable tribble-server
  main-is:             Main.hs
  other-modules:
    Common
    Config
    Control.Concurrent.Notify
    DB
    Export
    Export.Common
    Export.LaTeX
    Export.Markdown
    Export.PDF
    Export.Pandoc
    Export.Word
    Imports
    Services
  build-depends:
    base >= 4.8 && < 4.9
    , acid-state >= 0.14 && < 0.15
    , aeson >= 0.9 && < 0.11
    , base64-bytestring >= 1.0 && < 1.1
    , blaze-builder
    , bytestring
    , cereal >= 0.4 && < 0.6
    , configifier >= 0.1 && < 0.2
    , containers >= 0.5 && < 0.6
    , concurrent-extra >= 0.7 && < 0.8
    , cookie >= 0.4 && < 0.5
    , Coroutine >= 0.2 && < 0.3
    , directory >= 1.2 && < 1.3
    , hashable >= 1.2.3 && < 1.3
    , heredoc >= 0.2 && < 0.3
    , ID >= 0.1 && < 0.2
    , http-types
    , lens >= 4.12 && < 4.14
    , mtl >= 2.2 && < 2.3
    , network
    , network-uri >= 2.6 && < 2.7
    , oauth2-google >= 0.1 && < 0.2
    , pandoc >= 1.16 && < 1.18
    , pandoc-types >= 1.16 && < 1.18
    , plug-common >= 0.1 && < 0.2
    , plug-server >= 0.1 && < 0.2
    , psqueues >= 0.2 && < 0.3
    , random >= 1.1 && < 1.2
    , safecopy >= 0.8 && < 0.10
    , serversession >= 1.0 && < 1.1
    , serversession-backend-acid-state >= 1.0 && < 1.1
    , serversession-frontend-wai >= 1.0 && < 1.1
    , stm >= 2.4 && < 2.5
    , stm-containers >= 0.2.10 && < 0.3
    , TCache >= 0.14 && < 0.15
    , text >= 1.2 && < 1.3
    , text-index >= 0.2 && < 0.3
    , time >= 1.5 && < 1.6
    , transformers >= 0.4 && < 0.5
    , tst >= 0.1.1 && < 0.2
    , vault >= 0.3 && < 0.4
    , wai-session >= 0.3 && < 0.4
    , wai-websockets
    , warp
    , wai
    , wai-app-static
    , websockets

    , tribble-common
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    LambdaCase
    Rank2Types
    ScopedTypeVariables

executable cli
  main-is:             CLI.hs
  -- ghc-options:         -main-is CLI
  other-modules:       
    Common
    DB
    Imports
    OldData
  -- other-extensions:    
  build-depends:
    base >= 4.7 && < 4.9
    , bytestring >= 0.10 && < 0.11
    , cereal >= 0.4 && < 0.6
    , console-program >= 0.4 && < 0.5
    , containers >= 0.5 && < 0.6
    , directory >= 1.2 && < 1.3
    , hashable >= 1.2.3 && < 1.3
    , ID >= 0.1 && < 0.2
    , lens >= 4.12 && < 4.14
    , mtl >= 2.2 && < 2.3
    , oauth2-google >= 0.1 && < 0.2
    , pandoc >= 1.16 && < 1.18
    , plug-server >= 0.1 && < 0.2
    , psqueues >= 0.2 && < 0.3
    , random-shuffle >= 0.0 && < 0.1
    , safecopy >= 0.8 && < 0.10
    , stm >= 2.4 && < 2.5
    , TCache >= 0.14 && < 0.15
    , text >= 1.2 && < 1.3
    , text-index >= 0.2 && < 0.3
    , time >= 1.4 && < 1.6
    , transformers >= 0.4 && < 0.5
    , tribble-common
    , tst >= 0.1.1 && < 0.2
  hs-source-dirs:      src
  extra-libraries:     tinfo
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    DeriveGeneric
    DeriveDataTypeable
    FlexibleInstances
    LambdaCase
    ScopedTypeVariables
    TypeFamilies
